--- a/src/pages/tabs/tabMain.html
+++ b/src/pages/tabs/tabMain.html
@@ -1,8 +1,9 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>
-      LGM Hub Mobile
-    </ion-title>
+  <ion-navbar color="primary">
+    <button menuToggle ion-button icon-olny>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>Hub Mobile</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -18,5 +19,3 @@
 
   <hub-footer></hub-footer>
 </ion-content>
-
-
