--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -11,18 +11,18 @@
   <form autocomplete="off" #loginForm="ngForm">
     <ion-row>
       <ion-col>
-        <ion-list inset>
-          <ion-item>
-            <ion-input placeholder="Username" id="username" name="username"
-                       type="text" required [(ngModel)]="username" #un>
-            </ion-input>
-          </ion-item>
-          <ion-item>
-            <ion-input placeholder="Password" name="password" id="passwordField"
-                       type="password" required [(ngModel)]="password">
-            </ion-input>
-          </ion-item>
-        </ion-list>
+        <ion-item>
+          <ion-label floating>Username</ion-label>
+          <ion-input id="username" name="username"
+                     type="text" required [(ngModel)]="username" #un>
+          </ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label floating>Password</ion-label>
+          <ion-input name="password" id="passwordField"
+                     type="password" required [(ngModel)]="password">
+          </ion-input>
+        </ion-item>
       </ion-col>
     </ion-row>
 
