--- a/src/pages/create/create.html
+++ b/src/pages/create/create.html
@@ -43,14 +43,14 @@
       </ion-datetime>
     </ion-item>
 
-    <ion-card *ngIf="base64Image">
-      <img src="base64Image">
+    <ion-card *ngIf="image">
+      <img src="{{pathForImage(image)}}" style="width: 100%">
     </ion-card>
 
     <ion-row>
       <ion-col col-6>
         <button ion-button type="button" (click)="takePicture()">
-          <ion-icon name="camera"></ion-icon>&nbsp;&nbsp;Camera
+          <ion-icon name="camera"></ion-icon>&nbsp;&nbsp;Take picture
         </button>
       </ion-col>
       <ion-col col-6 text-right>
