camera image dom sanitizer

--- a/src/pages/create/create.html
+++ b/src/pages/create/create.html
@@ -44,7 +44,7 @@
     </ion-item>
 
     <ion-card *ngIf="image">
-      <img src="{{image}}" style="width: 100%">
+      <img [src]="DomSanitizer.bypassSecurityTrustUrl(image)" style="width: 100%">
     </ion-card>
 
     <ion-row>
