--- a/src/pages/claim/claim.html
+++ b/src/pages/claim/claim.html
@@ -7,7 +7,7 @@
 </ion-header>
 
 <ion-content>
-  <ion-label padding>Find your oyster</ion-label>
+  <ion-label padding>Find your oyster!!!</ion-label>
 
 
   <hub-footer></hub-footer>
