--- a/src/pages/contacts/contact.html
+++ b/src/pages/contacts/contact.html
@@ -25,6 +25,8 @@
     </div>
 
     <div style="margin-top: 30px;">Follow us at Twitter, FaceBook, LinkedIn, Glassdoor, MySpace, Qzone and more!</div>
+
+    <div> I love team red!!</div>
   </ion-card>
 
 
