shwoing api root

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -37,5 +37,11 @@
     </ion-col>
   </ion-row>
 
+  <ion-row padding-top="100">
+    <ion-col>
+      <ion-item color="light" text-wrap>Connecting to: {{apiRoot}}</ion-item>
+    </ion-col>
+  </ion-row>
+
   <hub-footer></hub-footer>
 </ion-content>
